Load the FinBERT sentiment analysis model

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -12,6 +12,17 @@
     "from transformers import pipeline\n",
     "import torch"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the FinBERT sentiment analysis model\n",
+    "tokenizer = BertTokenizer.from_pretrained('ProsusAI/finbert')\n",
+    "model = BertForSequenceClassification.from_pretrained('ProsusAI/finbert')"
+   ]
   }
  ],
  "metadata": {
