Initialize the FinBERT sentiment analysis pipeline

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -23,6 +23,15 @@
     "tokenizer = BertTokenizer.from_pretrained('ProsusAI/finbert')\n",
     "model = BertForSequenceClassification.from_pretrained('ProsusAI/finbert')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finbert = pipeline(\"sentiment-analysis\", model=model, tokenizer=tokenizer)"
+   ]
   }
  ],
  "metadata": {
