--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -32,6 +32,22 @@
    "source": [
     "finbert = pipeline(\"sentiment-analysis\", model=model, tokenizer=tokenizer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "headers = {\n",
+    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko)'\n",
+    "                  ' Chrome/91.0.4472.124 Safari/537.36',\n",
+    "    'Accept-Language': 'en-US,en;q=0.5',\n",
+    "    'Accept-Encoding': 'gzip, deflate, br',\n",
+    "    'Connection': 'keep-alive',\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
