--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -55,7 +55,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = 'https://en.wikipedia.org/wiki/List_of_S%26P_500_companies'"
+   ]
   }
  ],
  "metadata": {
