--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -58,6 +58,15 @@
    "source": [
     "url = 'https://en.wikipedia.org/wiki/List_of_S%26P_500_companies'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp500_table = pd.read_html(url)[0]"
+   ]
   }
  ],
  "metadata": {
