Extract the list of stock symbols

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -67,6 +67,15 @@
    "source": [
     "sp500_table = pd.read_html(url)[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp500_table = sp500_table['Symbol'].tolist()"
+   ]
   }
  ],
  "metadata": {
