Loop for each stock and get the url for it

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -74,7 +74,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp500_table = sp500_table['Symbol'].tolist()"
+    "sp500_table = sp500_table['Symbol'].tolist()\n",
+    "sp500_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for stock in sp500_table:\n",
+    "    url = f\"https://finance.yahoo.com/quote/{stock}/news?p={stock}\""
    ]
   }
  ],
