Send an HTTP request with headers

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -85,7 +85,8 @@
    "outputs": [],
    "source": [
     "for stock in sp500_table:\n",
-    "    url = f\"https://finance.yahoo.com/quote/{stock}/news?p={stock}\""
+    "    url = f\"https://finance.yahoo.com/quote/{stock}/news?p={stock}\"\n",
+    "    response = requests.get(url, headers=headers)"
    ]
   }
  ],
