--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -86,7 +86,9 @@
    "source": [
     "for stock in sp500_table:\n",
     "    url = f\"https://finance.yahoo.com/quote/{stock}/news?p={stock}\"\n",
-    "    response = requests.get(url, headers=headers)"
+    "    response = requests.get(url, headers=headers)\n",
+    "    if response.status_code == 200:\n",
+    "        soup = BeautifulSoup(response.content, 'html.parser')"
    ]
   }
  ],
