Extract the news items

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -88,7 +88,8 @@
     "    url = f\"https://finance.yahoo.com/quote/{stock}/news?p={stock}\"\n",
     "    response = requests.get(url, headers=headers)\n",
     "    if response.status_code == 200:\n",
-    "        soup = BeautifulSoup(response.content, 'html.parser')"
+    "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "        news_items = soup.find_all('li', class_='stream-item')"
    ]
   }
  ],
