Print the sentiment for each scraped headline

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -89,7 +89,10 @@
     "    response = requests.get(url, headers=headers)\n",
     "    if response.status_code == 200:\n",
     "        soup = BeautifulSoup(response.content, 'html.parser')\n",
-    "        news_items = soup.find_all('li', class_='stream-item')"
+    "        news_items = soup.find_all('li', class_='stream-item')\n",
+    "        \n",
+    "        sentiment_scores = []\n",
+    "        print(f\"\\nScraped Headlines and Sentiment Scores for {stock}:\")"
    ]
   }
  ],
