Loop over each news Item

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -92,7 +92,11 @@
     "        news_items = soup.find_all('li', class_='stream-item')\n",
     "        \n",
     "        sentiment_scores = []\n",
-    "        print(f\"\\nScraped Headlines and Sentiment Scores for {stock}:\")"
+    "        print(f\"\\nScraped Headlines and Sentiment Scores for {stock}:\")\n",
+    "        \n",
+    "        for i, item in enumerate(news_items):\n",
+    "            headline_tag = item.find('h3')\n",
+    "            headline = headline_tag.get_text().strip() if headline_tag else ''"
    ]
   }
  ],
