--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -94,10 +94,12 @@
     "        sentiment_scores = []\n",
     "        print(f\"\\nScraped Headlines and Sentiment Scores for {stock}:\")\n",
     "        \n",
-    "        for i, item in enumerate(news_items):\n",
-    "            \n",
+    "        for i, item in enumerate(news_items):    \n",
     "            headline_tag = item.find('h3')\n",
-    "            headline = headline_tag.get_text().strip() if headline_tag else ''"
+    "            headline = headline_tag.get_text().strip() if headline_tag else ''\n",
+    "            \n",
+    "            description_tag = item.find('p')\n",
+    "            description = description_tag.get_text().strip() if description_tag else ''"
    ]
   }
  ],
