Combine headline and description

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -99,7 +99,9 @@
     "            headline = headline_tag.get_text().strip() if headline_tag else ''\n",
     "            \n",
     "            description_tag = item.find('p')\n",
-    "            description = description_tag.get_text().strip() if description_tag else ''"
+    "            description = description_tag.get_text().strip() if description_tag else ''\n",
+    "            \n",
+    "            text = f\"{headline} {description}\""
    ]
   }
  ],
