Check if headline and discription exists

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -101,7 +101,10 @@
     "            description_tag = item.find('p')\n",
     "            description = description_tag.get_text().strip() if description_tag else ''\n",
     "            \n",
-    "            text = f\"{headline} {description}\""
+    "            text = f\"{headline} {description}\"\n",
+    "            \n",
+    "            if description and headline:\n",
+    "                finbert_result = finbert(text)[0]"
    ]
   }
  ],
