Perform sentiment analysis using FinBERT

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -104,7 +104,10 @@
     "            text = f\"{headline} {description}\"\n",
     "            \n",
     "            if description and headline:\n",
-    "                finbert_result = finbert(text)[0]"
+    "                finbert_result = finbert(text)[0]\n",
+    "                \n",
+    "                sentiment_score = finbert_result['score']\n",
+    "                sentiment_label = finbert_result['label']"
    ]
   }
  ],
