Consider sentiment scores for avveraging

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -107,7 +107,12 @@
     "                finbert_result = finbert(text)[0]\n",
     "                \n",
     "                sentiment_score = finbert_result['score']\n",
-    "                sentiment_label = finbert_result['label']"
+    "                sentiment_label = finbert_result['label']\n",
+    "                \n",
+    "                if sentiment_label == 'positive' or sentiment_label == 'negative':\n",
+    "                    if sentiment_label == 'negative':\n",
+    "                        sentiment_score = -sentiment_score \n",
+    "                    sentiment_scores.append(sentiment_score)"
    ]
   }
  ],
