--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -112,7 +112,9 @@
     "                if sentiment_label == 'positive' or sentiment_label == 'negative':\n",
     "                    if sentiment_label == 'negative':\n",
     "                        sentiment_score = -sentiment_score \n",
-    "                    sentiment_scores.append(sentiment_score)"
+    "                    sentiment_scores.append(sentiment_score)\n",
+    "                \n",
+    "                print(f\"{i+1}. Headline: {headline}\")"
    ]
   }
  ],
