--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -114,7 +114,8 @@
     "                        sentiment_score = -sentiment_score \n",
     "                    sentiment_scores.append(sentiment_score)\n",
     "                \n",
-    "                print(f\"{i+1}. Headline: {headline}\")"
+    "                print(f\"{i+1}. Headline: {headline}\")\n",
+    "                print(f\"   Description: {description}\")"
    ]
   }
  ],
