Print the results3

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -115,7 +115,9 @@
     "                    sentiment_scores.append(sentiment_score)\n",
     "                \n",
     "                print(f\"{i+1}. Headline: {headline}\")\n",
-    "                print(f\"   Description: {description}\")"
+    "                print(f\"   Description: {description}\")\n",
+    "                print(f\"   Sentiment: {sentiment_label}, Score: {sentiment_score:.4f}\")\n",
+    "                print('-' * 80)"
    ]
   }
  ],
