Calculate average sentiment score

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -117,7 +117,10 @@
     "                print(f\"{i+1}. Headline: {headline}\")\n",
     "                print(f\"   Description: {description}\")\n",
     "                print(f\"   Sentiment: {sentiment_label}, Score: {sentiment_score:.4f}\")\n",
-    "                print('-' * 80)"
+    "                print('-' * 80)\n",
+    "                \n",
+    "        if sentiment_scores:\n",
+    "            average_sentiment = sum(sentiment_scores) / len(sentiment_scores)"
    ]
   }
  ],
