--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -120,7 +120,8 @@
     "                print('-' * 80)\n",
     "                \n",
     "        if sentiment_scores:\n",
-    "            average_sentiment = sum(sentiment_scores) / len(sentiment_scores)"
+    "            average_sentiment = sum(sentiment_scores) / len(sentiment_scores)\n",
+    "            print(f\"Average Sentiment Score for {stock}: {average_sentiment:.4f}\")"
    ]
   }
  ],
