Print the average sentiment score

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -121,7 +121,9 @@
     "                \n",
     "        if sentiment_scores:\n",
     "            average_sentiment = sum(sentiment_scores) / len(sentiment_scores)\n",
-    "            print(f\"Average Sentiment Score for {stock}: {average_sentiment:.4f}\")"
+    "            print(f\"Average Sentiment Score for {stock}: {average_sentiment:.4f}\")\n",
+    "        else:\n",
+    "            print(\"No sentiment scores to average.\")"
    ]
   }
  ],
