Handel fetch data error

--- a/Sentiment Analysis/main.ipynb
+++ b/Sentiment Analysis/main.ipynb
@@ -123,7 +123,10 @@
     "            average_sentiment = sum(sentiment_scores) / len(sentiment_scores)\n",
     "            print(f\"Average Sentiment Score for {stock}: {average_sentiment:.4f}\")\n",
     "        else:\n",
-    "            print(\"No sentiment scores to average.\")"
+    "            print(\"No sentiment scores to average.\")\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"Failed to fetch data for {stock}. Status code: {response.status_code}\")"
    ]
   }
  ],
