Select Date and Close price from dataframe

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -8,7 +8,18 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('MSFT.csv')\n",
-    "df\n"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['Date', 'Close']]\n",
+    "\n",
+    "df"
    ]
   }
  ],
