--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -2,12 +2,314 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1980-12-12</td>\n",
+       "      <td>0.128348</td>\n",
+       "      <td>0.128906</td>\n",
+       "      <td>0.128348</td>\n",
+       "      <td>0.128348</td>\n",
+       "      <td>0.098943</td>\n",
+       "      <td>469033600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1980-12-15</td>\n",
+       "      <td>0.122210</td>\n",
+       "      <td>0.122210</td>\n",
+       "      <td>0.121652</td>\n",
+       "      <td>0.121652</td>\n",
+       "      <td>0.093781</td>\n",
+       "      <td>175884800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1980-12-16</td>\n",
+       "      <td>0.113281</td>\n",
+       "      <td>0.113281</td>\n",
+       "      <td>0.112723</td>\n",
+       "      <td>0.112723</td>\n",
+       "      <td>0.086898</td>\n",
+       "      <td>105728000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1980-12-17</td>\n",
+       "      <td>0.115513</td>\n",
+       "      <td>0.116071</td>\n",
+       "      <td>0.115513</td>\n",
+       "      <td>0.115513</td>\n",
+       "      <td>0.089049</td>\n",
+       "      <td>86441600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1980-12-18</td>\n",
+       "      <td>0.118862</td>\n",
+       "      <td>0.119420</td>\n",
+       "      <td>0.118862</td>\n",
+       "      <td>0.118862</td>\n",
+       "      <td>0.091630</td>\n",
+       "      <td>73449600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11024</th>\n",
+       "      <td>2024-09-06</td>\n",
+       "      <td>223.949997</td>\n",
+       "      <td>225.240005</td>\n",
+       "      <td>219.770004</td>\n",
+       "      <td>220.820007</td>\n",
+       "      <td>220.820007</td>\n",
+       "      <td>48423000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11025</th>\n",
+       "      <td>2024-09-09</td>\n",
+       "      <td>220.820007</td>\n",
+       "      <td>221.270004</td>\n",
+       "      <td>216.710007</td>\n",
+       "      <td>220.910004</td>\n",
+       "      <td>220.910004</td>\n",
+       "      <td>67180000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11026</th>\n",
+       "      <td>2024-09-10</td>\n",
+       "      <td>218.919998</td>\n",
+       "      <td>221.479996</td>\n",
+       "      <td>216.729996</td>\n",
+       "      <td>220.110001</td>\n",
+       "      <td>220.110001</td>\n",
+       "      <td>51591000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11027</th>\n",
+       "      <td>2024-09-11</td>\n",
+       "      <td>221.460007</td>\n",
+       "      <td>223.089996</td>\n",
+       "      <td>217.889999</td>\n",
+       "      <td>222.660004</td>\n",
+       "      <td>222.660004</td>\n",
+       "      <td>44587100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11028</th>\n",
+       "      <td>2024-09-12</td>\n",
+       "      <td>222.500000</td>\n",
+       "      <td>223.550003</td>\n",
+       "      <td>219.820007</td>\n",
+       "      <td>222.770004</td>\n",
+       "      <td>222.770004</td>\n",
+       "      <td>37455600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11029 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Date        Open        High         Low       Close   Adj Close  \\\n",
+       "0      1980-12-12    0.128348    0.128906    0.128348    0.128348    0.098943   \n",
+       "1      1980-12-15    0.122210    0.122210    0.121652    0.121652    0.093781   \n",
+       "2      1980-12-16    0.113281    0.113281    0.112723    0.112723    0.086898   \n",
+       "3      1980-12-17    0.115513    0.116071    0.115513    0.115513    0.089049   \n",
+       "4      1980-12-18    0.118862    0.119420    0.118862    0.118862    0.091630   \n",
+       "...           ...         ...         ...         ...         ...         ...   \n",
+       "11024  2024-09-06  223.949997  225.240005  219.770004  220.820007  220.820007   \n",
+       "11025  2024-09-09  220.820007  221.270004  216.710007  220.910004  220.910004   \n",
+       "11026  2024-09-10  218.919998  221.479996  216.729996  220.110001  220.110001   \n",
+       "11027  2024-09-11  221.460007  223.089996  217.889999  222.660004  222.660004   \n",
+       "11028  2024-09-12  222.500000  223.550003  219.820007  222.770004  222.770004   \n",
+       "\n",
+       "          Volume  \n",
+       "0      469033600  \n",
+       "1      175884800  \n",
+       "2      105728000  \n",
+       "3       86441600  \n",
+       "4       73449600  \n",
+       "...          ...  \n",
+       "11024   48423000  \n",
+       "11025   67180000  \n",
+       "11026   51591000  \n",
+       "11027   44587100  \n",
+       "11028   37455600  \n",
+       "\n",
+       "[11029 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
+    "import yfinance as yf\n",
     "df = pd.read_csv('MSFT.csv')\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1980-12-12</td>\n",
+       "      <td>0.128348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1980-12-15</td>\n",
+       "      <td>0.121652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1980-12-16</td>\n",
+       "      <td>0.112723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1980-12-17</td>\n",
+       "      <td>0.115513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1980-12-18</td>\n",
+       "      <td>0.118862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11024</th>\n",
+       "      <td>2024-09-06</td>\n",
+       "      <td>220.820007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11025</th>\n",
+       "      <td>2024-09-09</td>\n",
+       "      <td>220.910004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11026</th>\n",
+       "      <td>2024-09-10</td>\n",
+       "      <td>220.110001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11027</th>\n",
+       "      <td>2024-09-11</td>\n",
+       "      <td>222.660004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11028</th>\n",
+       "      <td>2024-09-12</td>\n",
+       "      <td>222.770004</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11029 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Date       Close\n",
+       "0      1980-12-12    0.128348\n",
+       "1      1980-12-15    0.121652\n",
+       "2      1980-12-16    0.112723\n",
+       "3      1980-12-17    0.115513\n",
+       "4      1980-12-18    0.118862\n",
+       "...           ...         ...\n",
+       "11024  2024-09-06  220.820007\n",
+       "11025  2024-09-09  220.910004\n",
+       "11026  2024-09-10  220.110001\n",
+       "11027  2024-09-11  222.660004\n",
+       "11028  2024-09-12  222.770004\n",
+       "\n",
+       "[11029 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df[['Date', 'Close']]\n",
+    "\n",
     "df"
    ]
   },
@@ -17,15 +319,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[['Date', 'Close']]\n",
-    "\n",
-    "df"
+    "df['Date']"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "tf",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
