--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -321,6 +321,20 @@
    "source": [
     "df['Date']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "def str_to_datetime(s):\n",
+    "  split = s.split('-')\n",
+    "  year, month, day = int(split[0]), int(split[1]), int(split[2])\n",
+    "  return datetime.datetime(year=year, month=month, day=day)"
+   ]
   }
  ],
  "metadata": {
