--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -324,17 +324,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(1986, 3, 19, 0, 0)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import datetime\n",
     "\n",
     "def str_to_datetime(s):\n",
     "  split = s.split('-')\n",
     "  year, month, day = int(split[0]), int(split[1]), int(split[2])\n",
-    "  return datetime.datetime(year=year, month=month, day=day)"
+    "  return datetime.datetime(year=year, month=month, day=day)\n",
+    "datetime_object = str_to_datetime('1986-03-19')\n",
+    "datetime_object"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fafaf\\AppData\\Local\\Temp\\ipykernel_47860\\2565755782.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['Date'] = df['Date'].apply(str_to_datetime)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0       1980-12-12\n",
+       "1       1980-12-15\n",
+       "2       1980-12-16\n",
+       "3       1980-12-17\n",
+       "4       1980-12-18\n",
+       "           ...    \n",
+       "11024   2024-09-06\n",
+       "11025   2024-09-09\n",
+       "11026   2024-09-10\n",
+       "11027   2024-09-11\n",
+       "11028   2024-09-12\n",
+       "Name: Date, Length: 11029, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Date'] = df['Date'].apply(str_to_datetime)\n",
+    "df['Date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
