download DAC stock prices

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -5,7 +5,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import yfinance as yf\n",
+    "\n",
+    "stock_data = yf.download('DAC', start='2014-02-21', end='2024-02-21')\n",
+    "stock_data"
+   ]
   }
  ],
  "metadata": {
