Normalixe the data

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -2,15 +2,207 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2014-02-21</th>\n",
+       "      <td>86.800003</td>\n",
+       "      <td>90.440002</td>\n",
+       "      <td>86.379997</td>\n",
+       "      <td>88.199997</td>\n",
+       "      <td>76.762558</td>\n",
+       "      <td>1179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-02-24</th>\n",
+       "      <td>88.339996</td>\n",
+       "      <td>90.440002</td>\n",
+       "      <td>86.660004</td>\n",
+       "      <td>89.599998</td>\n",
+       "      <td>77.981026</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-02-25</th>\n",
+       "      <td>89.599998</td>\n",
+       "      <td>90.160004</td>\n",
+       "      <td>86.660004</td>\n",
+       "      <td>88.480003</td>\n",
+       "      <td>77.006264</td>\n",
+       "      <td>1571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-02-26</th>\n",
+       "      <td>89.320000</td>\n",
+       "      <td>89.739998</td>\n",
+       "      <td>86.800003</td>\n",
+       "      <td>89.040001</td>\n",
+       "      <td>77.493645</td>\n",
+       "      <td>1600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-02-27</th>\n",
+       "      <td>88.199997</td>\n",
+       "      <td>89.320000</td>\n",
+       "      <td>85.120003</td>\n",
+       "      <td>87.360001</td>\n",
+       "      <td>76.031494</td>\n",
+       "      <td>2164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-13</th>\n",
+       "      <td>75.989998</td>\n",
+       "      <td>76.440002</td>\n",
+       "      <td>74.970001</td>\n",
+       "      <td>75.449997</td>\n",
+       "      <td>73.291382</td>\n",
+       "      <td>110400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-14</th>\n",
+       "      <td>72.650002</td>\n",
+       "      <td>74.949997</td>\n",
+       "      <td>72.019997</td>\n",
+       "      <td>72.570000</td>\n",
+       "      <td>70.493774</td>\n",
+       "      <td>189800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-15</th>\n",
+       "      <td>72.360001</td>\n",
+       "      <td>72.849998</td>\n",
+       "      <td>71.660004</td>\n",
+       "      <td>72.040001</td>\n",
+       "      <td>69.978943</td>\n",
+       "      <td>128700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-16</th>\n",
+       "      <td>72.040001</td>\n",
+       "      <td>72.500000</td>\n",
+       "      <td>71.290001</td>\n",
+       "      <td>71.669998</td>\n",
+       "      <td>69.619530</td>\n",
+       "      <td>106800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-20</th>\n",
+       "      <td>71.639999</td>\n",
+       "      <td>71.639999</td>\n",
+       "      <td>70.099998</td>\n",
+       "      <td>70.860001</td>\n",
+       "      <td>68.832703</td>\n",
+       "      <td>120800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2516 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Open       High        Low      Close  Adj Close  Volume\n",
+       "Date                                                                     \n",
+       "2014-02-21  86.800003  90.440002  86.379997  88.199997  76.762558    1179\n",
+       "2014-02-24  88.339996  90.440002  86.660004  89.599998  77.981026    2021\n",
+       "2014-02-25  89.599998  90.160004  86.660004  88.480003  77.006264    1571\n",
+       "2014-02-26  89.320000  89.739998  86.800003  89.040001  77.493645    1600\n",
+       "2014-02-27  88.199997  89.320000  85.120003  87.360001  76.031494    2164\n",
+       "...               ...        ...        ...        ...        ...     ...\n",
+       "2024-02-13  75.989998  76.440002  74.970001  75.449997  73.291382  110400\n",
+       "2024-02-14  72.650002  74.949997  72.019997  72.570000  70.493774  189800\n",
+       "2024-02-15  72.360001  72.849998  71.660004  72.040001  69.978943  128700\n",
+       "2024-02-16  72.040001  72.500000  71.290001  71.669998  69.619530  106800\n",
+       "2024-02-20  71.639999  71.639999  70.099998  70.860001  68.832703  120800\n",
+       "\n",
+       "[2516 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import yfinance as yf\n",
     "\n",
     "stock_data = yf.download('DAC', start='2014-02-21', end='2024-02-21')\n",
     "stock_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "scaled_data = scaler.fit_transform(stock_data['Close'].values.reshape(-1,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
