--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -199,6 +199,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def create_dataset(data, time_step):\n",
+    "    X, y = [], []\n",
+    "    for i in range(len(data) - time_step - 1):\n",
+    "        X.append(data[i:(i + time_step), 0])\n",
+    "        y.append(data[i + time_step, 0])\n",
+    "    return np.array(X), np.array(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
