Added time steps and added X, y data for training

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -218,7 +218,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "time_step = 100\n",
+    "X, y = create_dataset(scaled_data, time_step)"
+   ]
   }
  ],
  "metadata": {
