--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -215,12 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "time_step = 100\n",
-    "X, y = create_dataset(scaled_data, time_step)"
+    "X, y = create_dataset(scaled_data, time_step)\n",
+    "\n",
+    "train_size=0.8\n",
+    "X_train, X_test = X[:int(X.shape[0]*train_size)], X[int(X.shape[0]*train_size):]\n",
+    "y_train, y_test = y[:int(y.shape[0]*train_size)], y[int(y.shape[0]*train_size):]"
    ]
   }
  ],
