--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -226,6 +226,16 @@
     "X_train, X_test = X[:int(X.shape[0]*train_size)], X[int(X.shape[0]*train_size):]\n",
     "y_train, y_test = y[:int(y.shape[0]*train_size)], y[int(y.shape[0]*train_size):]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import LSTM, Dense"
+   ]
   }
  ],
  "metadata": {
