--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -234,7 +234,13 @@
    "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
-    "from keras.layers import LSTM, Dense"
+    "from keras.layers import LSTM, Dense\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(LSTM(units=64, return_sequences=True, input_shape=(time_step, 1)))\n",
+    "model.add(LSTM(units=64))\n",
+    "model.add(Dense(units=64))\n",
+    "model.add(Dense(units=1))"
    ]
   }
  ],
