Compile the model

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,6 +241,16 @@
     "model.add(LSTM(units=64))\n",
     "model.add(Dense(units=64))\n",
     "model.add(Dense(units=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=64)"
    ]
   }
  ],
