Test the model loss

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -288,6 +288,25 @@
     "model.compile(optimizer='adam', loss='mean_squared_error')\n",
     "model.fit(X_train, y_train, epochs=10, batch_size=64)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16/16 [==============================] - 2s 28ms/step - loss: 9.9067e-04\n",
+      "Test Loss: 0.000990670407190919\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_loss = model.evaluate(X_test, y_test)\n",
+    "print('Test Loss:', test_loss)"
+   ]
   }
  ],
  "metadata": {
