predict the X_test

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -307,6 +307,24 @@
     "test_loss = model.evaluate(X_test, y_test)\n",
     "print('Test Loss:', test_loss)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16/16 [==============================] - 1s 27ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = model.predict(X_test)\n",
+    "predictions = scaler.inverse_transform(predictions)"
+   ]
   }
  ],
  "metadata": {
