Get the predicted data and reshape it

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -325,6 +325,18 @@
     "predictions = model.predict(X_test)\n",
     "predictions = scaler.inverse_transform(predictions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_data = stock_data['Close'].values\n",
+    "predicted_data = np.empty_like(original_data)\n",
+    "predicted_data[:] = np.nan\n",
+    "predicted_data[-len(predictions):] = predictions.reshape(-1)"
+   ]
   }
  ],
  "metadata": {
