Predict the future prices

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -362,6 +362,53 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3/3 [==============================] - 0s 30ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([67.23042297, 67.41574097, 67.57076263, 67.65789032, 67.69841766,\n",
+       "       67.67560577, 67.62614441, 67.56473541, 67.46799469, 67.36478424,\n",
+       "       67.27288055, 67.23451233, 67.20475769, 67.17167664, 67.13500214,\n",
+       "       67.18338776, 67.2347641 , 67.28377533, 67.4285202 , 67.54155731,\n",
+       "       67.55687714, 67.46051025, 67.14164734, 66.74717712, 66.31491852,\n",
+       "       65.88716888, 65.83177185, 66.12194824, 66.48643494, 66.96652985,\n",
+       "       67.525177  , 68.12732697, 68.74450684, 69.29756927, 69.77616119,\n",
+       "       70.15694427, 70.39325714, 70.65563202, 71.0019455 , 71.37023163,\n",
+       "       71.57131195, 71.59832001, 71.4230957 , 71.15084076, 70.75131226,\n",
+       "       70.30122375, 69.90061951, 69.61210632, 69.62767029, 69.811203  ,\n",
+       "       70.18994141, 70.6552124 , 71.27005768, 71.98023987, 72.67517853,\n",
+       "       73.32233429, 73.86634827, 74.34614563, 74.78203583, 75.30469513,\n",
+       "       75.94513702, 76.75601196, 77.4906311 , 78.00522614, 78.3341217 ,\n",
+       "       78.48336029, 78.49069977, 78.45077515, 78.39910889, 78.32949829,\n",
+       "       78.16510773, 77.93647003, 77.71695709, 77.62232208, 77.60649109,\n",
+       "       77.65697479, 77.68376923, 77.80553436, 77.85466003, 77.80511475,\n",
+       "       77.58343506, 77.27684021, 76.90104675, 76.61723328, 76.31190491,\n",
+       "       76.04898071, 75.97631073, 75.97711945, 75.7888031 , 75.45733643])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "new_predictions = model.predict(X_test[-90:])\n",
+    "new_predictions = scaler.inverse_transform(new_predictions)\n",
+    "\n",
+    "predicted_data = np.append(predicted_data, new_predictions)\n",
+    "predicted_data[-90:]"
+   ]
   }
  ],
  "metadata": {
