Install all necessary libraries

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -1,5 +1,17 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install yfinance\n",
+    "!pip install prophet\n",
+    "!pip install matplotlib"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "tf",
