Import necessary libraries

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -2,14 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install yfinance\n",
-    "!pip install prophet\n",
-    "!pip install matplotlib"
+    "# !pip install yfinance\n",
+    "# !pip install prophet\n",
+    "# !pip install matplotlib"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\fafaf\\anaconda3\\envs\\tf\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Importing plotly failed. Interactive plots will not work.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from prophet import Prophet\n",
+    "from prophet.plot import plot_plotly, plot_components_plotly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
