--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -48,6 +48,21 @@
     "    # Add more symbols to reach 500\n",
     "]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fetch historical data for a single stock from Yahoo Finance\n",
+    "def fetch_stock_data(symbol, start_date='2015-01-01'):\n",
+    "    data = yf.download(symbol, start=start_date)\n",
+    "    data.reset_index(inplace=True)\n",
+    "    # Prophet requires columns as 'ds' and 'y'\n",
+    "    stock_data = data[['Date', 'Close']].rename(columns={'Date': 'ds', 'Close': 'y'})\n",
+    "    return stock_data"
+   ]
   }
  ],
  "metadata": {
