Added Training function for Prophet model and initialize the model

--- a/Stocks ML/main.ipynb
+++ b/Stocks ML/main.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +62,21 @@
     "    # Prophet requires columns as 'ds' and 'y'\n",
     "    stock_data = data[['Date', 'Close']].rename(columns={'Date': 'ds', 'Close': 'y'})\n",
     "    return stock_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configure and train Prophet model for each stock\n",
+    "def train_prophet(stock_data, stock_name, yearly_seasonality=True, daily_seasonality=False, holidays=None, changepoint_prior_scale=0.05):\n",
+    "    # Initialize Prophet with customized parameters\n",
+    "    m = Prophet(yearly_seasonality=yearly_seasonality,\n",
+    "                    daily_seasonality=daily_seasonality,\n",
+    "                    holidays=holidays,\n",
+    "                    changepoint_prior_scale=changepoint_prior_scale)\n"
    ]
   }
  ],
